# libleidenalg

./: .gitignore  pyproject.toml
.github/workflows/: build-wheel.yml
include/: CMakeLists.txt  GraphHelper.h  MarketNullModularityVertexPartition.h  MutableVertexPartition.h
marketnull/: CMakeLists.txt  build_local.sh  build_wheel.sh  marketnull_module.cpp  validate.py
src/: CMakeLists.txt  GraphHelper.cpp  MarketNullModularityVertexPartition.cpp  MutableVertexPartition.cpp
test/: test_market_null.cpp
